[package]
name = "euler-cryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
clap = { version = "4.5.18", features = ["derive"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8.5"
yasna = "0.5.2"

[features]
debug = []
